<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/product_name_cat"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/product_quantity_cat"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/reduceQuantityBtn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight=".15"
                    android:background="@drawable/button_press_affect"
                    android:text="-" />

                <EditText
                    android:id="@+id/quantityEditTextView"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight=".7"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/product_quantity"
                    android:inputType="number" />

                <Button
                    android:id="@+id/increaseQuantityBtn"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight=".15"
                    android:background="@drawable/button_press_affect"
                    android:text="+" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/product_cost_cat"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/costEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/product_cost"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveFloadtingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_check_white"
        app:elevation="6dp"
        app:borderWidth="0dp"/>

</RelativeLayout>